antlr-gui/BKITParser.py
# Generated from BKIT.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "','", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'='", "'<-'", "'!='", 
                     "'<'", "'<='", "'>='", "'>'", "'...'", "'=='", "'true'", 
                     "'false'", "'number'", "'bool'", "'string'", "'return'", 
                     "'var'", "'dynamic'", "'func'", "'for'", "'until'", 
                     "'by'", "'break'", "'continue'", "'if'", "'else'", 
                     "'elif'", "'begin'", "'end'", "'not'", "'and'", "'or'" ]

    symbolicNames = [ "<INVALID>", "BOOL_LIT", "FLOAT_LIT", "INT_LIT", "STRING_LIT", 
                      "LP", "RP", "LS", "RS", "COMMA", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "EQUAL", "ASSIGN", "NOT_SAME", "LESS_THAN", 
                      "LESS_THAN_EQUAL", "GREATER_THAN_EQUAL", "GREATER_THAN", 
                      "CONCAT", "SAME", "TRUE", "FALSE", "NUMBER", "BOOL", 
                      "STRING", "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", 
                      "UNTIL", "BY", "BREAK", "CONTINUE", "IF", "ELSE", 
                      "ELIF", "BEGIN", "END", "NOT", "AND", "OR", "LINE_COMMENT", 
                      "ID", "NEW_LINE", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_full = 4
    RULE_vardecl_not_full = 5
    RULE_vardecl_array = 6
    RULE_funcdecl = 7
    RULE_func_prototype = 8
    RULE_func_body = 9
    RULE_paramdecl = 10
    RULE_param_list = 11
    RULE_param_prime = 12
    RULE_stmt = 13
    RULE_assign_stmt = 14
    RULE_if_stmt = 15
    RULE_for_stmt = 16
    RULE_break_stmt = 17
    RULE_continue_stmt = 18
    RULE_return_stmt = 19
    RULE_call_stmt = 20
    RULE_block_stmt = 21
    RULE_blocked_list = 22
    RULE_stmt_plus_vardecl = 23
    RULE_lhs = 24
    RULE_exp = 25
    RULE_expr_list = 26
    RULE_exprprime = 27
    RULE_exp0 = 28
    RULE_exp1 = 29
    RULE_exp2 = 30
    RULE_exp3 = 31
    RULE_exp4 = 32
    RULE_exp5 = 33
    RULE_exp6 = 34
    RULE_exp7 = 35
    RULE_constant = 36
    RULE_sub_exp = 37
    RULE_index_expr = 38
    RULE_index_operator = 39
    RULE_func_call = 40
    RULE_array_lit = 41
    RULE_array_type = 42
    RULE_dimensions = 43
    RULE_number_lits = 44
    RULE_atomic_types = 45
    RULE_number_lit = 46

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "vardecl_full", 
                   "vardecl_not_full", "vardecl_array", "funcdecl", "func_prototype", 
                   "func_body", "paramdecl", "param_list", "param_prime", 
                   "stmt", "assign_stmt", "if_stmt", "for_stmt", "break_stmt", 
                   "continue_stmt", "return_stmt", "call_stmt", "block_stmt", 
                   "blocked_list", "stmt_plus_vardecl", "lhs", "exp", "expr_list", 
                   "exprprime", "exp0", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "exp7", "constant", "sub_exp", "index_expr", 
                   "index_operator", "func_call", "array_lit", "array_type", 
                   "dimensions", "number_lits", "atomic_types", "number_lit" ]

    EOF = Token.EOF
    BOOL_LIT=1
    FLOAT_LIT=2
    INT_LIT=3
    STRING_LIT=4
    LP=5
    RP=6
    LS=7
    RS=8
    COMMA=9
    ADD=10
    SUB=11
    MUL=12
    DIV=13
    MOD=14
    EQUAL=15
    ASSIGN=16
    NOT_SAME=17
    LESS_THAN=18
    LESS_THAN_EQUAL=19
    GREATER_THAN_EQUAL=20
    GREATER_THAN=21
    CONCAT=22
    SAME=23
    TRUE=24
    FALSE=25
    NUMBER=26
    BOOL=27
    STRING=28
    RETURN=29
    VAR=30
    DYNAMIC=31
    FUNC=32
    FOR=33
    UNTIL=34
    BY=35
    BREAK=36
    CONTINUE=37
    IF=38
    ELSE=39
    ELIF=40
    BEGIN=41
    END=42
    NOT=43
    AND=44
    OR=45
    LINE_COMMENT=46
    ID=47
    NEW_LINE=48
    WS=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51
    ERROR_CHAR=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(BKITParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.decllist()
            self.state = 95
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKITParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(BKITParser.DecllistContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decllist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecllist" ):
                listener.enterDecllist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecllist" ):
                listener.exitDecllist(self)




    def decllist(self):

        localctx = BKITParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.decl()
                self.state = 98
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKITParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(BKITParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = BKITParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 105
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.NUMBER, BKITParser.BOOL, BKITParser.STRING, BKITParser.VAR, BKITParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.vardecl()
                pass
            elif token in [BKITParser.FUNC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW_LINE(self):
            return self.getToken(BKITParser.NEW_LINE, 0)

        def vardecl_not_full(self):
            return self.getTypedRuleContext(BKITParser.Vardecl_not_fullContext,0)


        def vardecl_full(self):
            return self.getTypedRuleContext(BKITParser.Vardecl_fullContext,0)


        def vardecl_array(self):
            return self.getTypedRuleContext(BKITParser.Vardecl_arrayContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vardecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl" ):
                listener.enterVardecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl" ):
                listener.exitVardecl(self)




    def vardecl(self):

        localctx = BKITParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 107
                self.vardecl_not_full()
                pass

            elif la_ == 2:
                self.state = 108
                self.vardecl_full()
                pass

            elif la_ == 3:
                self.state = 109
                self.vardecl_array()
                pass


            self.state = 112
            self.match(BKITParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def DYNAMIC(self):
            return self.getToken(BKITParser.DYNAMIC, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_vardecl_full

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl_full" ):
                listener.enterVardecl_full(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl_full" ):
                listener.exitVardecl_full(self)




    def vardecl_full(self):

        localctx = BKITParser.Vardecl_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_full)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            _la = self._input.LA(1)
            if not(_la==BKITParser.VAR or _la==BKITParser.DYNAMIC):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 115
            self.match(BKITParser.ID)
            self.state = 116
            self.match(BKITParser.ASSIGN)
            self.state = 117
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_not_fullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_types(self):
            return self.getTypedRuleContext(BKITParser.Atomic_typesContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vardecl_not_full

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl_not_full" ):
                listener.enterVardecl_not_full(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl_not_full" ):
                listener.exitVardecl_not_full(self)




    def vardecl_not_full(self):

        localctx = BKITParser.Vardecl_not_fullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_not_full)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.atomic_types()
            self.state = 120
            self.match(BKITParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 121
                self.match(BKITParser.ASSIGN)
                self.state = 122
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_arrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type(self):
            return self.getTypedRuleContext(BKITParser.Array_typeContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_vardecl_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardecl_array" ):
                listener.enterVardecl_array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardecl_array" ):
                listener.exitVardecl_array(self)




    def vardecl_array(self):

        localctx = BKITParser.Vardecl_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.array_type()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 126
                self.match(BKITParser.ASSIGN)
                self.state = 127
                self.array_lit()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_prototype(self):
            return self.getTypedRuleContext(BKITParser.Func_prototypeContext,0)


        def func_body(self):
            return self.getTypedRuleContext(BKITParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdecl" ):
                listener.enterFuncdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdecl" ):
                listener.exitFuncdecl(self)




    def funcdecl(self):

        localctx = BKITParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcdecl)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.func_prototype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.func_prototype()
                self.state = 132
                self.func_body()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_prototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(BKITParser.FUNC, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def LP(self):
            return self.getToken(BKITParser.LP, 0)

        def param_list(self):
            return self.getTypedRuleContext(BKITParser.Param_listContext,0)


        def RP(self):
            return self.getToken(BKITParser.RP, 0)

        def NEW_LINE(self):
            return self.getToken(BKITParser.NEW_LINE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_func_prototype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_prototype" ):
                listener.enterFunc_prototype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_prototype" ):
                listener.exitFunc_prototype(self)




    def func_prototype(self):

        localctx = BKITParser.Func_prototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func_prototype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(BKITParser.FUNC)
            self.state = 137
            self.match(BKITParser.ID)
            self.state = 138
            self.match(BKITParser.LP)
            self.state = 139
            self.param_list()
            self.state = 140
            self.match(BKITParser.RP)
            self.state = 141
            self.match(BKITParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(BKITParser.Block_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)




    def func_body(self):

        localctx = BKITParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_body)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.BEGIN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.block_stmt()
                pass
            elif token in [BKITParser.RETURN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.return_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def atomic_types(self):
            return self.getTypedRuleContext(BKITParser.Atomic_typesContext,0)


        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def DYNAMIC(self):
            return self.getToken(BKITParser.DYNAMIC, 0)

        def array_type(self):
            return self.getTypedRuleContext(BKITParser.Array_typeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamdecl" ):
                listener.enterParamdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamdecl" ):
                listener.exitParamdecl(self)




    def paramdecl(self):

        localctx = BKITParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramdecl)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.NUMBER, BKITParser.BOOL, BKITParser.STRING]:
                    self.state = 147
                    self.atomic_types()
                    pass
                elif token in [BKITParser.VAR]:
                    self.state = 148
                    self.match(BKITParser.VAR)
                    pass
                elif token in [BKITParser.DYNAMIC]:
                    self.state = 149
                    self.match(BKITParser.DYNAMIC)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 152
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.array_type()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_prime(self):
            return self.getTypedRuleContext(BKITParser.Param_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)




    def param_list(self):

        localctx = BKITParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_list)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.NUMBER, BKITParser.BOOL, BKITParser.STRING, BKITParser.VAR, BKITParser.DYNAMIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.param_prime()
                pass
            elif token in [BKITParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self):
            return self.getTypedRuleContext(BKITParser.ParamdeclContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def param_prime(self):
            return self.getTypedRuleContext(BKITParser.Param_primeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_param_prime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_prime" ):
                listener.enterParam_prime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_prime" ):
                listener.exitParam_prime(self)




    def param_prime(self):

        localctx = BKITParser.Param_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_prime)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.paramdecl()
                self.state = 161
                self.match(BKITParser.COMMA)
                self.state = 162
                self.param_prime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.paramdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW_LINE(self):
            return self.getToken(BKITParser.NEW_LINE, 0)

        def assign_stmt(self):
            return self.getTypedRuleContext(BKITParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(BKITParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(BKITParser.For_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(BKITParser.Block_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(BKITParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(BKITParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(BKITParser.Return_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(BKITParser.Call_stmtContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = BKITParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 167
                self.assign_stmt()
                pass
